# One_bot_to_save_em_all

./: README.md  install.bat  install.sh  pyproject.toml  uninstall.bat  uninstall.sh
Data/: .gitignore  main.py  models.py
