[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "One_bot_to_save_em_all"
version = "0.0.1"
description = "Console assistant bot"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
assistant-bot = "Data.main:main"

[tool.setuptools.packages.find]
include = ["Data"]
exclude = ["SaveData"]